<resources>
    <string name="app_name">MobileTeamApp</string>
    <string name="button_label">장르별 소설 보러가기</string>
    <string name="button_label_2">"오늘의 꿈 일기\n 작성하러가기"</string>
    <string name="button_label_3">"카카오를 통한 회원가입"</string>
    <string name="button_label_4">"소설 생성"</string>
    <string name="button_label_5">"꿈 분석 내용 확인"</string>
    <string name="button_label_6">"꿈 분석 내용"</string>
    <string name="button_label_7">"꿈을 입력하세요"</string>
    <string name="button_label_8">"오늘 꾼 꿈은 무엇인가요?"</string>
    <string name="button_label_9">"소설 생성하기"</string>

    <string name="custom_radio_se_1">"기쁨"</string>
    <string name="custom_radio_se_2">"슬픔"</string>
    <string name="custom_radio_se_3">"놀람"</string>
    <string name="custom_radio_se_4">"분노"</string>
    <string name="custom_radio_se_5">"불안"</string>

    <string name="custom_radio_se_6">"열린결말"</string>
    <string name="custom_radio_se_7">"해피엔딩"</string>
    <string name="custom_radio_se_8">"새드엔딩"</string>
    <string name="custom_radio_se_9">"권선징악"</string>
    <string name="custom_radio_se_10">"성장형 결말"</string>
    <string name="custom_radio_se_11">"반전 결말"</string>

    <string name="que_1">"1. 꿈을 쓴 후 기분이 어땠나요?"</string>
    <string name="que_2">"2. 가장 뚜렷했던 장면이 무엇이었나요?"</string>
    <string name="que_3">"3. 꿈 속에 나온 물건이 무엇인가요?"</string>
    <string name="que_4">"4. 소설 엔딩은 어떻게 할까요?"</string>
    <string name="que_5">"5. 반드시 들어갔으면 하는 문장이나 단어"</string>

    <string name="que_h_1">"꿈의 가장 뚜렷했던 장면을 입력하시오."</string>
    <string name="que_h_2">"꿈 속 물건을 입력하시오."</string>
    <string name="que_h_3">"필수 단어를 입력하시오."</string>

    <string name="nov_1">"판타지"</string>
    <string name="nov_2">"로맨틱"</string>
    <string name="nov_3">"SF"</string>
    <string name="nov_4">"다큐맨터리"</string>
    <string name="nov_5">"스릴러"</string>
    <string name="nov_6">"코미디"</string>
    <string name="nov_7">"액션"</string>

    <string name="title_1">"꿈 소설"</string>
    <string name="title_que_2">" 수정할 내용을 입력하시오."</string>
    <string name="title_que_h_4">" 구체적으로 입력하시오."</string>


    <string name="btn_tit_1">" 홈으로"</string>
    <string name="btn_tit_2">" 새 장르"</string>
    <string name="btn_tit_3">" 수정"</string>

    <string name="h_null">""</string>

    <string name="q_btn_1">"소설 생성 하러가기"</string>
    <string name="q_btn_2">"다음 질문으로~"</string>

    <string-array name="genre_array">
            <item>선택</item>
            <item>스릴러</item>
            <item>멜로</item>
            <item>로맨틱</item>
            <item>코미디</item>
            <item>액션</item>
            <item>SF</item>
            <item>판타지</item>
            <item>다큐멘터리</item>
    </string-array>

    <string name="button_select_date">주별 날짜</string>
    <string name="button_home">홈으로</string>
    <string name="story_title">꿈 제목</string>

    <string name="button_label_10">"꿈 일기"</string>
    <string name="btn_delete">꿈 일기 삭제</string>
    <string name="btn_go_to_novel">소설 보러 가기</string>

    <string name="button_novel_delete">소설 삭제</string>
    <string name="button_sharing">공유</string>
    <string name="button_back">이전</string>
    <string name="button_home">홈으로</string>

    <string name="button_URL">URL</string>


</resources>