<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#FFFFFF">

    <RadioGroup
        android:id="@+id/rgEnding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="12dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbEndingOpen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/nov_1"
                android:textSize="18sp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:fontFamily="@font/spoqahansansneo_bold"
                android:button="@drawable/custom_radio_selector"
                android:gravity="center" />

            <RadioButton
                android:id="@+id/rbEndingHappy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/nov_2"
                android:textSize="18sp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:button="@drawable/custom_radio_selector"
                android:fontFamily="@font/spoqahansansneo_bold"
                android:gravity="center"/>

            <RadioButton
                android:id="@+id/rbEndingTwist2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/custom_radio_selector"
                android:fontFamily="@font/spoqahansansneo_bold"
                android:gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/nov_3"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rbEndingTwist3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/custom_radio_selector"
                android:fontFamily="@font/spoqahansansneo_bold"
                android:gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/nov_4"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbEndingTwist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nov_5"
                android:textSize="18sp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:button="@drawable/custom_radio_selector"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/spoqahansansneo_bold"
                android:gravity="center"/>

            <RadioButton
                android:id="@+id/rbEndingGrowth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nov_6"
                android:textSize="18sp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:button="@drawable/custom_radio_selector"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/spoqahansansneo_bold"
                android:gravity="center"/>

            <RadioButton
                android:id="@+id/rbEndingSad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nov_7"
                android:textSize="18sp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:button="@drawable/custom_radio_selector"
                android:fontFamily="@font/spoqahansansneo_bold"
                android:gravity="center"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />
    </RadioGroup>

    <!-- 상단 버튼 영역 (소설삭제 / 공유) -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- 꿈 제목 -->
        <TextView
            android:id="@+id/tvDreamTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_label_10"
            android:layout_marginEnd="130dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDeleteNovel"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_login"
            android:fontFamily="@font/spoqahansansneo_bold"
            android:text="@string/button_novel_delete"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:layout_marginBottom="8dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSharing"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:background="@drawable/rounded_login"
            android:fontFamily="@font/spoqahansansneo_bold"
            android:text="@string/button_sharing"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <!-- 생성된 소설 내용 -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/box_border"
        android:overScrollMode="always"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/tvDreamAnalysis"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/h_null"
                android:minLines="3"
                android:padding="8dp"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>

    <!-- 하단 버튼 영역 (이전 / 홈으로) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBack"
            android:layout_width="90dp"
            android:layout_height="48dp"
            android:layout_marginEnd="199dp"
            android:background="@drawable/rounded_login"
            android:fontFamily="@font/spoqahansansneo_bold"
            android:text="@string/button_back"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnHome"
            android:layout_width="90dp"
            android:layout_height="48dp"
            android:background="@drawable/rounded_login"
            android:fontFamily="@font/spoqahansansneo_bold"
            android:text="@string/button_home"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>
