<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="16dp">

    <!-- ScrollView로 전체 내용을 감싸기 -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:layout_above="@+id/btnGenerateNovel">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- 1. 꿈을 쓴 후 기분이 어땠나요? -->
            <TextView
                android:id="@+id/tvQuestion_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/que_1"
                android:textSize="18sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000" />

            <RadioGroup
                android:id="@+id/rgMood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp">

                <RadioButton
                    android:id="@+id/rbMoodJoy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_radio_se_1"
                    android:fontFamily="@font/spoqahansansneo_bold"
                    android:textSize="18sp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:button="@drawable/custom_radio_selector"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"/>

                <RadioButton
                    android:id="@+id/rbMoodSad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_radio_se_2"
                    android:fontFamily="@font/spoqahansansneo_bold"
                    android:textSize="18sp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:button="@drawable/custom_radio_selector"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"/>

                <RadioButton
                    android:id="@+id/rbMoodAnger"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_radio_se_4"
                    android:fontFamily="@font/spoqahansansneo_bold"
                    android:textSize="18sp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:button="@drawable/custom_radio_selector"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"/>

                <RadioButton
                    android:id="@+id/rbMoodSurprise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_radio_se_3"
                    android:fontFamily="@font/spoqahansansneo_bold"
                    android:textSize="18sp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:button="@drawable/custom_radio_selector"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"/>

                <RadioButton
                    android:id="@+id/rbMoodAnxiety"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_radio_se_5"
                    android:fontFamily="@font/spoqahansansneo_bold"
                    android:textSize="18sp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:button="@drawable/custom_radio_selector"
                    android:gravity="center"/>

            </RadioGroup>

            <!-- 2. 가장 뚜렷했던 장면이 무엇이었나요? -->
            <TextView
                android:id="@+id/tvQuestion2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/que_2"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="7dp"
                android:fontFamily="@font/spoqahansansneo_bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/etMostVividScene"
                android:layout_width="370dp"
                android:layout_height="80dp"
                android:layout_marginBottom="5dp"
                android:autofillHints="username"
                android:background="@drawable/tv_border"
                android:fontFamily="@font/spoqahansansneo_bold"
                android:gravity="top"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:hint="@string/que_h_1"
                android:inputType="textMultiLine"
                android:padding="5dp"
                android:textColorHint="#757575" />

            <!-- 3. 꿈 속에 나온 물건이 무엇인가요? -->
            <TextView
                android:id="@+id/tvQuestion3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/que_3"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="7dp"
                android:textColor="#000000"
                android:fontFamily="@font/spoqahansansneo_bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/etDreamObjects"
                android:layout_width="370dp"
                android:layout_height="80dp"
                android:background="@drawable/tv_border"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:padding="8dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:hint="@string/que_h_2"
                android:fontFamily="@font/spoqahansansneo_bold"
                android:layout_marginBottom="7dp"
                android:textColorHint="#757575"
                android:autofillHints="username" />

            <!-- 4. 소설 엔딩은 어떻게 할까요? -->
            <TextView
                android:id="@+id/tvQuestion4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/que_4"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/spoqahansansneo_bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"
                android:layout_marginBottom="10dp"/>

            <!-- RadioGroup 안에 RadioButton을 직접 자식으로 나열해야 getCheckedRadioButtonId()가 정상 동작합니다. -->
            <RadioGroup
                android:id="@+id/rgEnding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="12dp">

                <RadioButton
                    android:id="@+id/rbEndingOpen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_radio_se_6"
                    android:textSize="18sp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:fontFamily="@font/spoqahansansneo_bold"
                    android:button="@drawable/custom_radio_selector"
                    android:gravity="center"
                    android:layout_marginBottom="8dp" />

                <RadioButton
                    android:id="@+id/rbEndingHappy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_radio_se_7"
                    android:textSize="18sp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:fontFamily="@font/spoqahansansneo_bold"
                    android:button="@drawable/custom_radio_selector"
                    android:gravity="center"
                    android:layout_marginBottom="8dp" />

                <RadioButton
                    android:id="@+id/rbEndingTwist2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_radio_se_11"
                    android:textSize="18sp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:fontFamily="@font/spoqahansansneo_bold"
                    android:button="@drawable/custom_radio_selector"
                    android:gravity="center"
                    android:layout_marginBottom="8dp" />

                <RadioButton
                    android:id="@+id/rbEndingTwist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_radio_se_9"
                    android:textSize="18sp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:fontFamily="@font/spoqahansansneo_bold"
                    android:button="@drawable/custom_radio_selector"
                    android:gravity="center"
                    android:layout_marginBottom="8dp" />

                <RadioButton
                    android:id="@+id/rbEndingGrowth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_radio_se_10"
                    android:textSize="18sp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:fontFamily="@font/spoqahansansneo_bold"
                    android:button="@drawable/custom_radio_selector"
                    android:gravity="center"
                    android:layout_marginBottom="8dp" />

                <RadioButton
                    android:id="@+id/rbEndingSad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_radio_se_8"
                    android:textSize="18sp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:fontFamily="@font/spoqahansansneo_bold"
                    android:button="@drawable/custom_radio_selector"
                    android:gravity="center" />

            </RadioGroup>

            <!-- 5. 반드시 들어갔으면 하는 문장이나 단어 -->
            <TextView
                android:id="@+id/tvQuestion5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/que_5"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/spoqahansansneo_bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/etRequiredWords"
                android:layout_width="370dp"
                android:layout_height="80dp"
                android:layout_marginBottom="24dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:autofillHints="username"
                android:background="@drawable/tv_border"
                android:gravity="top"
                android:hint="@string/que_h_3"
                android:textColorHint="#757575"
                android:fontFamily="@font/spoqahansansneo_bold"
                android:inputType="textMultiLine"
                android:padding="8dp" />

        </LinearLayout>
    </ScrollView>

    <!-- 소설 생성하기 버튼 -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGenerateNovel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:text="@string/q_btn_1"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_login"
        android:fontFamily="@font/spoqahansansneo_bold" />

</RelativeLayout>
